# cgx_veyn

./: .env.example  .gitignore  CANON.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  docker-compose.yml  governance.json  openapi.yaml  plan.md  registry.toml  rules.toml  veyn.toml.example
.cargo/: config.toml
.github/workflows/: ci.yml
.jules/: bolt.md
docs/integrations/: claude-mcp.md  gemma4-tool-calling.md  ollama.md  openai-function-calling.md
intero/src-tauri/: Cargo.toml  tauri.conf.json
intero/src-tauri/src/: main.rs
notebooks/: hrv_longitudinal.ipynb  session_retrospective.ipynb
plugins/garmin-connect/: Cargo.toml  plugin.toml
plugins/garmin-connect/src/: lib.rs
plugins/whoop/: Cargo.toml  plugin.toml
plugins/whoop/src/: lib.rs
sdk/: Cargo.toml
sdk/examples/: context_reader.ts  llm_agent.py  session_record.py
sdk/go/: README.md  go.mod  veyn.go
sdk/go/examples/: agent_example.go
sdk/go/veyn/: client.go  types.go
sdk/py/: pyproject.toml
sdk/py/veyn/: __init__.py  client.py  types.py
sdk/src/: lib.rs
sdk/ts/: package-lock.json  package.json  tsconfig.json
sdk/ts/src/: client.ts  index.ts  somatic.ts  somatic_cli.ts  types.ts
tools/: rem-alert.html
veyn-adapters/: Cargo.toml
veyn-adapters/src/: audio.rs  audio_level.rs  ble.rs  eeg.rs  evdev_adapter.rs  fs_watcher.rs  healthkit.rs  hidraw.rs  iokit.rs  lib.rs  midi.rs  mock.rs  mqtt.rs  mqtt_intent.rs  osc_output.rs  serial_adapter.rs  winusb.rs
veyn-core/: Cargo.toml
veyn-core/src/: auth.rs  baseline.rs  coherence.rs  compression.rs  config.rs  dispatcher.rs  inference.rs  main.rs  memory.rs  presence.rs  session.rs  storage.rs  temporal.rs
veyn-core/src/api/: dashboard.html  mod.rs  routes.rs  state.rs
veyn-core/tests/: integration.rs
veyn-insight/: Cargo.toml
veyn-insight/src/: lib.rs
veyn-mcp/: Cargo.toml
veyn-mcp/src/: main.rs
veyn-plugins/: Cargo.toml
veyn-plugins/src/: lib.rs  manifest.rs  runtime.rs
veyn-schemas/: Cargo.toml
veyn-schemas/src/: lib.rs
