[workspace]
members = ["veyn-schemas", "veyn-adapters", "veyn-core", "veyn-plugins", "veyn-mcp", "sdk"]
resolver = "2"

[workspace.dependencies]
tokio      = { version = "1",    features = ["full"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
anyhow     = "1"
async-trait = "0.1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid       = { version = "1",    features = ["v4"] }
chrono     = { version = "0.4",  features = ["serde"] }
clap       = { version = "4",    features = ["derive", "env"] }
rand       = "0.8"
toml       = "0.8"
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
