[package]
name    = "veyn-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "veyn-core"
path = "src/main.rs"

[dependencies]
veyn-schemas   = { path = "../veyn-schemas" }
veyn-adapters  = { path = "../veyn-adapters" }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
chrono         = { workspace = true }
axum           = { version = "0.7", features = ["ws"] }
tower-http     = { version = "0.5", features = ["cors"] }
