[package]
name    = "veyn-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "veyn-core"
path = "src/main.rs"

[dependencies]
veyn-schemas   = { path = "../veyn-schemas" }
veyn-adapters  = { path = "../veyn-adapters" }
veyn-plugins   = { path = "../veyn-plugins" }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
chrono         = { workspace = true }
clap           = { workspace = true }
rand           = { workspace = true }
toml           = { workspace = true }
uuid           = { workspace = true }
axum           = { version = "0.7", features = ["ws"] }
tower-http     = { version = "0.5", features = ["cors"] }
tower          = { version = "0.4", features = ["limit", "util"] }
