[package]
name        = "veyn-mcp"
version     = "0.1.0"
edition     = "2021"
description = "MCP stdio server — exposes VEYN daemon as tools for Claude and other LLM agents"

[[bin]]
name = "veyn-mcp"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
reqwest            = { workspace = true }
