[package]
name    = "veyn-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
veyn-schemas  = { path = "../veyn-schemas" }
veyn-adapters = { path = "../veyn-adapters" }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
async-trait   = { workspace = true }
tracing       = { workspace = true }
wasmtime      = { version = "25", default-features = false, features = ["cranelift", "runtime"] }
toml          = "0.8"
reqwest       = { version = "0.12", features = ["blocking"] }
chrono        = { workspace = true }
