[package]
name = "intero-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
sysinfo = "0.29"
dirs = "5.0"
