[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "veyn-sdk"
version = "0.1.0"
description = "Python SDK for the VEYN daemon"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["veyn*"]
